Revert "Pass over macaroons and queue"
This reverts commit 596c0281062b13a9273e4e1087ee68ef5c666701.